--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nx/cypress": "21.4.1",
     "@nx/eslint": "21.4.1",
     "@nx/eslint-plugin": "21.4.1",
+    "@nx/express": "^21.4.1",
     "@nx/jest": "21.4.1",
     "@nx/js": "21.4.1",
     "@nx/next": "21.4.1",
