--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "axios": "^1.6.0",
+    "express": "^4.21.2",
     "next": "~15.2.4",
     "react": "19.0.0",
     "react-dom": "19.0.0"
@@ -21,13 +23,19 @@
     "@nx/jest": "21.4.1",
     "@nx/js": "21.4.1",
     "@nx/next": "21.4.1",
+    "@nx/node": "21.4.1",
+    "@nx/web": "21.4.1",
+    "@nx/webpack": "21.4.1",
     "@nx/workspace": "21.4.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
+    "@types/express": "^4.17.21",
     "@types/jest": "^30.0.0",
     "@types/node": "20.19.9",
     "@types/react": "19.0.0",
@@ -45,16 +53,19 @@
     "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^30.0.2",
     "jest-environment-jsdom": "^30.0.2",
+    "jest-environment-node": "^30.0.2",
     "jest-util": "^30.0.2",
     "nx": "21.4.1",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
+    "react-refresh": "^0.10.0",
     "tailwindcss": "3.4.3",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2",
-    "typescript-eslint": "^8.29.0"
+    "typescript-eslint": "^8.29.0",
+    "webpack-cli": "^5.1.4"
   },
   "workspaces": [
     "apps/*"
