--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,12 @@
     },
     {
       "path": "./apps/philiapp"
+    },
+    {
+      "path": "./apps/philiapp-api-e2e"
+    },
+    {
+      "path": "./apps/philiapp-api"
     }
   ]
 }
