--- a/apps/philiapp-api/package.json
+++ b/apps/philiapp-api/package.json
@@ -66,6 +66,8 @@
     }
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "@prisma/client": "^6.15.0",
+    "express": "^4.21.2",
+    "prisma": "^6.15.0"
   }
 }
