[philiapp] Include Navbar into Layout

--- a/apps/philiapp/tsconfig.json
+++ b/apps/philiapp/tsconfig.json
@@ -30,6 +30,7 @@
     "app/**/*.jsx",
     "app/**/*.ts",
     "app/**/*.tsx",
+    "lib/**/*.ts",
     "next-env.d.ts",
     ".next/types/**/*.ts"
   ],
